@@ -2,6 +2,17 @@
 
         Reviewed by Tony Chang.
 
+        Port Mozilla's IndexedDB tests: index cursors
+        https://bugs.webkit.org/show_bug.cgi?id=59472
+
+        * storage/indexeddb/mozilla: Added.
+        * storage/indexeddb/mozilla/object-cursors-expected.txt: Added.
+        * storage/indexeddb/mozilla/object-cursors.html: Added.
+
+2011-04-27  Mark Pilgrim  <pilgrim@chromium.org>
+
+        Reviewed by Tony Chang.
+
         Port Mozilla's IndexedDB tests: event.target.source in success callbacks
         https://bugs.webkit.org/show_bug.cgi?id=59632
 
